mute music button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <span>Next:</span>
           <span id="next-emoji">🐭</span>
         </div>
+        <button id="mute-button" class="mute-button">🔊</button>
       </header>
       <main class="game-shell">
         <div class="playfield">
