bonus level added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         <div class="modal-content">
           <h2 id="modal-title">Game Over</h2>
           <p id="modal-message">Emojis overflowed the basket.</p>
-          <button id="restart-button">Play Again</button>
+          <div class="modal-actions">
+            <button id="restart-button" class="primary-button">Play Again</button>
+            <button id="bonus-button" class="secondary-button hidden">Bonus Level</button>
+          </div>
         </div>
       </div>
     </div>
